# The-View-location

./: README.md
src/camera_tranform_body/: CMakeLists.txt
src/camera_tranform_body/src/user_config/: fork_vehicle.yaml
src/test/src/: test.cpp
test_server/devel/: .catkin  setup.sh
test_server/devel/lib/pkgconfig/: test.pc
test_server/devel/lib/test/: test_node
test_server/devel/share/test/cmake/: testConfig.cmake
test_server/src/test/: CMakeLists.txt  package.xml
test_server/src/test/src/: test.cpp
vscamera_coord/devel/: .catkin  local_setup.sh  setup.sh
vscamera_coord/devel/lib/camera_tranform_body/: camera_tranform_body_node
vscamera_coord/devel/lib/pkgconfig/: camera_tranform_body.pc  vxense_camera_coordposition.pc  world_coordinates.pc
vscamera_coord/devel/lib/vxense_camera_coordposition/: vxense_camera_coordposition_node
vscamera_coord/devel/lib/world_coordinates/: world_coordinates_node
vscamera_coord/devel/share/camera_tranform_body/cmake/: camera_tranform_bodyConfig.cmake
vscamera_coord/devel/share/vxense_camera_coordposition/cmake/: vxense_camera_coordpositionConfig.cmake
vscamera_coord/devel/share/world_coordinates/cmake/: world_coordinatesConfig.cmake
vscamera_coord/src/camera_tranform_body/src/: camera_tranform_body.cpp
vscamera_coord/src/camera_tranform_body/src/user_config/: fork_vehicle.yaml
vscamera_coord/src/vxense_camera_coordposition/: package.xml
vscamera_coord/src/vxense_camera_coordposition/launch/: rgb_stereo_node.launch
vscamera_coord/src/vxense_camera_coordposition/src/: FrameViewer.cpp
vscamera_coord/src/world_coordinates/: CMakeLists.txt
vscamera_coord/src/world_coordinates/src/: .world_coordinates_node.cpp.swp  world_coordinates_node.cpp
yang/more_important/: op.txt
yang/more_important/ubuntu18/test_server/devel/lib/test/: test_node
yang/more_important/ubuntu18/vscamera_coord/devel/: .catkin
yang/more_important/ubuntu18/vscamera_coord/devel/lib/camera_tranform_body/: camera_tranform_body_node
yang/more_important/ubuntu18/vscamera_coord/devel/lib/pkgconfig/: camera_tranform_body.pc  world_coordinates.pc
yang/more_important/ubuntu18/vscamera_coord/devel/lib/vxense_camera_coordposition/: vxense_camera_coordposition_node
yang/more_important/ubuntu18/vscamera_coord/src/camera_tranform_body/src/: .camera_tranform_body.cpp.swp  camera_tranform_body.cpp
yang/more_important/ubuntu18/vscamera_coord/src/vxense_camera_coordposition/: CMakeLists.txt
yang/more_important/ubuntu18/vscamera_coord/src/vxense_camera_coordposition/src/: .FrameViewer.cpp.swp  FrameViewer.cpp
yang/more_important/ubuntu18/vscamera_coord/src/world_coordinates/: package.xml
杨工/: libsqlite3-dev_3.31.1-4ubuntu0.6_amd64.deb  sqlite3_3.31.1-4ubuntu0.6_amd64.deb
杨工/before_has_more_bright/vscamera_coord/devel/: .catkin  local_setup.sh
杨工/before_has_more_bright/vscamera_coord/devel/lib/camera_tranform_body/: camera_tranform_body_node
杨工/before_has_more_bright/vscamera_coord/devel/lib/pkgconfig/: camera_tranform_body.pc  vxense_camera_coordposition.pc  world_coordinates.pc
杨工/before_has_more_bright/vscamera_coord/devel/lib/vxense_camera_coordposition/: vxense_camera_coordposition_node
杨工/before_has_more_bright/vscamera_coord/devel/lib/world_coordinates/: world_coordinates_node
杨工/before_has_more_bright/vscamera_coord/devel/share/camera_tranform_body/cmake/: camera_tranform_bodyConfig.cmake
杨工/before_has_more_bright/vscamera_coord/devel/share/vxense_camera_coordposition/cmake/: vxense_camera_coordpositionConfig.cmake
杨工/before_has_more_bright/vscamera_coord/devel/share/world_coordinates/cmake/: world_coordinatesConfig.cmake
杨工/before_has_more_bright/vscamera_coord/src/camera_tranform_body/src/: camera_tranform_body.cpp
杨工/before_has_more_bright/vscamera_coord/src/vxense_camera_coordposition/: CMakeLists.txt
杨工/before_has_more_bright/vscamera_coord/src/vxense_camera_coordposition/src/: FrameViewer.cpp
杨工/succeed/src/touch_screen/: CMakeLists.txt  package.xml
杨工/succeed/src/touch_screen/src/: touch.cpp
杨工/succeed/src/vxense_camera_coordposition/launch/: rgb_stereo_node.launch
杨工/succeed/src/vxense_camera_coordposition/src/: FrameViewer.cpp
杨工/succeed/src/world_coordinates/src/: world_coordinates_node.cpp
杨工/succeed/yang/more_important/ubuntu18/vscamera_coord/src/camera_tranform_body/src/: .camera_tranform_body.cpp.swo
杨工/succeed/yang/more_important/ubuntu18/vscamera_coord/src/camera_tranform_body/src/user_config/: fork_vehicle.yaml
杨工/succeed/yang/more_important/ubuntu18/vscamera_coord/src/world_coordinates/src/: world_coordinates_node.cpp
杨工/比较/: FrameViewer.cpp
杨工/比较/1/: FrameViewer.cpp
