<?xml version="1.0"?>
<package format="2">
  <name>zoom_factor_publisher</name>
  <version>0.0.1</version>
  <description>A ROS package to publish zoom factor based on touch events using X11.</description>

  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>